[package]
name = "asteroid-landing"
version = "0.1.0"
edition = "2024"
authors = ["Daryll Lorenzo <daryllla77@gmail.com>"]
description = "Landing page for Asteroid - Tropos methodology modeling app"
repository = "https://github.com/DaryllLorenzo/asteroid"

[dependencies]
# development version of Yew
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlElement",
    "Element",
    "MediaQueryList",
    "MediaQueryListEvent",
] }